<resources>
    <string name="app_name">CSA Student App</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="do_you_have_account">Do you have account?</string>
    <string name="kerala">Kerala</string>
    <string name="_91">+91</string>
    <string name="confirm_password">Confirm password</string>
    <string name="tutorials">Tutorials</string>
    <string name="events">Events</string>
    <string name="videos">Videos</string>
    <string name="logout">Logout</string>
    <string name="learn_html">Learn HTML</string>
    <string name="learn_javascript">Learn JavaScript</string>
    <string name="learn_python">Learn Python</string>
    <string name="learn_css">Learn CSS</string>
    <string name="gdg_kozhikode">GDG Kozhikode</string>
    <string name="_7">7</string>
    <string name="techmeet_360">TechMeet 360</string>
    <string name="_14">14</string>
    <string name="geeknight_cbe">GeekNight CBE</string>
    <string name="july">July</string>
    <string name="python_cochin">Python-Cochin</string>
    <string name="_23">23</string>
    <string name="kerala_microsoft_technology_meetup">Kerala Microsoft Technology Meetup</string>
    <string name="_21">21</string>
    <string name="june">June</string>
    <string name="data_science_workshops">Data Science Workshops</string>
    <string name="event_details">EVENT DETAILS</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="colon">:</string>
    <string name="venue">Venue</string>
    <string name="details">Details</string>
    <string name="book_ticket">BOOK TICKET</string>
</resources>