<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".ui.activities.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/logo" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_curved_edittext_light_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_curved_edittext_light_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/background_curved_edittext_light_gray"
                        android:fontFamily="@font/roboto_medium"
                        android:maxLength="100"
                        android:padding="10dp"
                        android:text="@string/_91"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edt_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/background_curved_edittext_light_gray"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/phone_number"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textSize="15sp"
                        tools:ignore="TextFields" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_curved_edittext_light_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="100"
                    android:padding="10dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/edt_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_curved_edittext_light_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLength="100"
                    android:padding="10dp"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/spinner_district"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_curved_edittext_light_gray"
                    android:padding="10dp"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/background_curved_edittext_light_gray"
                    android:fontFamily="@font/roboto_regular"
                    android:maxLength="100"
                    android:padding="10dp"
                    android:text="@string/kerala"
                    android:textSize="15sp" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nestScroll"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/background_curved_button_light_green"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_sign_up"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/do_you_have_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="#0B630E"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>