<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.activities.BookEventsActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/txt_eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/events"
                android:textColor="@color/dark_green"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/date"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:paddingHorizontal="5dp"
                    android:text="@string/colon"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:gravity="start"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/venue"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:paddingHorizontal="5dp"
                    android:text="@string/colon"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_Venue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:gravity="start"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:text="@string/details"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:paddingHorizontal="5dp"
                    android:text="@string/colon"
                    android:textColor="@color/dark_green"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txt_Details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_book_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_curved_button_light_green"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/book_ticket"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>